2016-03-14  Martin Sebor  <msebor@redhat.com>

	PR c++/53792
	* g++.dg/cpp0x/constexpr-inline.C: New test.
	* g++.dg/cpp0x/constexpr-inline-1.C: Same.

2016-03-14  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.dg/torture/pr70083.c: Prune non-standard ABI.

2016-03-14  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/70219
	* gcc.dg/pr70219.c: New test.

2016-03-14  Bernd Schmidt  <bschmidt@redhat.com>

	PR target/70083
	* gcc.dg/torture/pr70083.c: New test.
	* gcc.target/i386/pr70083.c: New test.

2016-03-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56365
	* gcc.dg/tree-ssa/phi-opt-14.c: New testcase.

2016-03-14  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/70098
	* lib/target-supports.exp (check_effective_target_powerpc64_no_dm):
	New function.
	* g++.dg/pr70098.C: New testcase.


2016-03-14  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/70045
	* gcc.dg/graphite/pr70045.c: New test.

2016-03-13  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/69043
	* gfortran.dg/include_9.f90: New test.

2016-03-13  Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR fortran/45076
	gfortran.dg/prof/prof.exp: New script.
	gfortran.dg/prof/dynamic_dispatch_6.f03: New test.

2016-03-12  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/69307
	* gcc.dg/pr69307.c: New test.

2016-03-12  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/69614
	* gcc.target/arm/pr69614.c: New.

2016-03-12  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/70031
	* gfortran.dg/submodule_14.f08: New test

	PR fortran/69524
	* gfortran.dg/submodule_15.f08: New test

2016-03-12  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/70106
	* g++.dg/cpp1y/paren3.C: New test.

2016-03-11  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/70131
	* gcc.target/powerpc/ppc-round2.c: New test.

2016-03-11  Bernd Schmidt  <bschmidt@redhat.com>

	PR target/70123
	* gcc.dg/torture/pr70123.c: New test.

2016-03-11  Jeff Law  <law@redhat.com>
